Updated and Added documentation

--- a/TimberLogHelp/embeddedstyles.css
+++ b/TimberLogHelp/embeddedstyles.css
@@ -90,6 +90,12 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	font-family:"Cambria","serif";
 	color:#17365D;
 	letter-spacing:.25pt;}
+a:link, span.MsoHyperlink
+	{color:blue;
+	text-decoration:underline;}
+a:visited, span.MsoHyperlinkFollowed
+	{color:purple;
+	text-decoration:underline;}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{margin-top:0in;
 	margin-right:0in;
